[gd_scene load_steps=19 format=2]

[ext_resource path="res://Sprites/snaku.png" type="Texture" id=1]
[ext_resource path="res://Snaku.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 488, 0, 61, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 549, 0, 61, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 610, 0, 61, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 61, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 61, 0, 61, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 122, 0, 61, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 183, 0, 61, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 244, 0, 61, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 305, 0, 61, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 366, 0, 61, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 427, 0, 61, 32 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "Aim",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 11.5, 7 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 9.5, 6.5 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 87.5, 44.5 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 4.5, 5 )

[node name="Snaku" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 21 )
animation = "Idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 3 )
shape = SubResource( 10 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -1.5, -1.5 )
shape = SubResource( 25 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -21.5, -0.5 )
shape = SubResource( 22 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2DLeft" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -25.5, -1 )
shape = SubResource( 23 )

[node name="CollisionShape2DRight" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 25, -2 )
shape = SubResource( 23 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]

[node name="RemoveTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="RemoveTimer" to="." method="_on_RemoveTimer_timeout"]
